# PhytRAG

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: routes.py  schemas.py
app/generation/: llm_client.py
app/observability/: logging_config.py  metrics.py
app/retrieval/: embedder.py  vector_store.py
docs/: generate_architecture.py
docs/runbooks/: 01-latency-spike.md  02-qdrant-oom.md  03-embedding-upgrade.md
eval/: eval_questions.yml  retrieval_eval.py
grafana/dashboards/: phytrag-overview.json
grafana/provisioning/dashboards/: phytrag.yml
ingestion/: chunk_and_embed.py  download_corpus.py
tests/: test_api.py  test_retrieval.py
ui/: streamlit_app.py
