[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "phytrag"
version = "0.1.0"
description = "Production RAG service over plant biology literature"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chirag Mandal", email = "chirag.dbl@gmail.com" }]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "qdrant-client>=1.9.1",
    "sentence-transformers>=2.7.0",
    "openai>=1.30.0",
    "prometheus-client>=0.20.0",
    "mlflow>=2.13.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "python-json-logger>=2.0.7",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]
ui = [
    "streamlit>=1.35.0",
    "requests>=2.32.0",
]

[tool.setuptools.packages.find]
include = ["app*", "ingestion*", "eval*"]

# ── Ruff linting config ────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in function signatures

[tool.ruff.lint.isort]
known-first-party = ["app", "ingestion", "eval"]

# ── Pytest config ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=60"
